@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!DOCTYPE crontab SYSTEM "crontab.dtd">
 <crontab>
-<crontabentry id="-1">
+<crontabentry id="0">
 	<seconds>0</seconds> 
 	<minutes>*</minutes> 
 	<hours>*</hours> 
@@ -12,12 +12,11 @@
 	<bussinesdays>true</bussinesdays> 
 	<startDate>null</startDate> 
 	<endDate>null</endDate> 
-	<class>tests.test</class> 
-	<method></method> 
-	<parameters>1 2 3</parameters>
+	<class>org.jcrontab.tests.Test4</class> 
+	<method>test32</method> 
 	<description>null</description> 
 </crontabentry>
-<crontabentry id="-1">
+<crontabentry id="1">
 	<seconds>0</seconds> 
 	<minutes>*</minutes> 
 	<hours>*</hours> 
@@ -28,12 +27,11 @@
 	<bussinesdays>true</bussinesdays> 
 	<startDate>null</startDate> 
 	<endDate>null</endDate> 
-	<class>tests.test</class> 
-	<method></method> 
-	<parameters>1 2 3</parameters>
+	<class>org.jcrontab.tests.Test4</class> 
+	<method>test31 1</method> 
 	<description>null</description> 
 </crontabentry>
-<crontabentry id="-1">
+<crontabentry id="2">
 	<seconds>0</seconds> 
 	<minutes>*</minutes> 
 	<hours>*</hours> 
@@ -44,41 +42,8 @@
 	<bussinesdays>true</bussinesdays> 
 	<startDate>null</startDate> 
 	<endDate>null</endDate> 
-	<class>tests.test</class> 
-	<method></method> 
-	<parameters>1 2 3</parameters>
-	<description>null</description> 
-</crontabentry>
-<crontabentry id="-1">
-	<seconds>0</seconds> 
-	<minutes>*</minutes> 
-	<hours>*</hours> 
-	<daysofmonth>*</daysofmonth> 
-	<months>*</months> 
-	<daysofweek>*</daysofweek> 
-	<years>*</years> 
-	<bussinesdays>true</bussinesdays> 
-	<startDate>null</startDate> 
-	<endDate>null</endDate> 
-	<class>tests.test</class> 
-	<method></method> 
-	<parameters>1 2 3</parameters>
-	<description>null</description> 
-</crontabentry>
-<crontabentry id="-1">
-	<seconds>0</seconds> 
-	<minutes>*</minutes> 
-	<hours>*</hours> 
-	<daysofmonth>*</daysofmonth> 
-	<months>*</months> 
-	<daysofweek>*</daysofweek> 
-	<years>*</years> 
-	<bussinesdays>true</bussinesdays> 
-	<startDate>null</startDate> 
-	<endDate>null</endDate> 
-	<class>tests.test</class> 
-	<method></method> 
-	<parameters>1 2 3</parameters>
+	<class>org.jcrontab.tests.Test4</class> 
+	<method>test3</method> 
 	<description>null</description> 
 </crontabentry>
 </crontab>
