@@ -18,6 +18,7 @@ Solved nasty bug with */0 thanks to Guenter
 Solved bug to compare the Year correctly
 Added MemorySourceWithOutPersistence to help in testing and automatic
 environments
+Added Process Logic, Bean, Managers, etc. See the related doc
 1.4.1
 Updated copyright notice
 changed org.jcrontab.Jcrontab to adapt to the right message
